formatting and toList()